// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilteredDeviceListHeader /> renders correctly when all devices are selected 1`] = `
<div>
  <div
    class="mx_FilteredDeviceListHeader"
    data-testid="test123"
  >
    <span
      tabindex="0"
    >
      <form
        class="_root_19upo_16"
      >
        <div
          class="_inline-field_19upo_32"
        >
          <div
            class="_inline-field-control_19upo_44"
          >
            <div
              class="_container_1hel1_10"
            >
              <input
                aria-label="Deselect all"
                aria-labelledby=":r9:"
                checked=""
                class="_input_1hel1_18"
                data-testid="device-select-all-checkbox"
                id="device-select-all-checkbox"
                type="checkbox"
              />
              <div
                class="_ui_1hel1_19"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="_inline-field-body_19upo_38"
          />
        </div>
      </form>
    </span>
    <span
      class="mx_FilteredDeviceListHeader_label"
    >
      Sessions
    </span>
    <div>
      test
    </div>
  </div>
</div>
`;

exports[`<FilteredDeviceListHeader /> renders correctly when no devices are selected 1`] = `
<div>
  <div
    class="mx_FilteredDeviceListHeader"
    data-testid="test123"
  >
    <span
      tabindex="0"
    >
      <form
        class="_root_19upo_16"
      >
        <div
          class="_inline-field_19upo_32"
        >
          <div
            class="_inline-field-control_19upo_44"
          >
            <div
              class="_container_1hel1_10"
            >
              <input
                aria-label="Select all"
                aria-labelledby=":r0:"
                class="_input_1hel1_18"
                data-testid="device-select-all-checkbox"
                id="device-select-all-checkbox"
                type="checkbox"
              />
              <div
                class="_ui_1hel1_19"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="_inline-field-body_19upo_38"
          />
        </div>
      </form>
    </span>
    <span
      class="mx_FilteredDeviceListHeader_label"
    >
      Sessions
    </span>
    <div>
      test
    </div>
  </div>
</div>
`;
